apps/office/nextcloud/nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      name: nextcloud
      labels:
        app: nextcloud
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        sysctls:
          - name: net.ipv4.ip_unprivileged_port_start
            value: "80"
      volumes:
        - name: nextcloud-volume-nfs
          persistentVolumeClaim:
            claimName: nextcloud-app-pvc-nfs
        - name: apps-volume-nfs
          persistentVolumeClaim:
            claimName: apps-pvc-nfs
      containers:
        - name: nextcloud
          image: docker.io/nextcloud:apache
          securityContext:
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            privileged: false
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nextcloud-volume-nfs
              mountPath: /var/www/html
              subPath: "config/"
            - name: apps-volume-nfs
              mountPath: /mnt/apps
            # - name: nextcloud-nfs
            #   mountPath: /mnt/storage
            #   subPath: "nextcloud-shared/"
            # - name: nextcloud-nfs
            #   mountPath: /mnt/media
            #   subPath: "files/"
