apps/office/nextcloud/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.umhomelab.com`)
      kind: Rule
      services:
        - name: nextcloud-svc
          namespace: nextcloud
          port: 80
  tls: {}
